--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/cli": "^13.0.1",
     "@aws-amplify/ui-react": "^6.9.2",
     "@aws-amplify/ui-react-liveness": "^3.3.2",
     "@aws-sdk/client-rekognition": "^3.750.0",
