--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@aws-amplify/ui-react": "^6.9.2",
     "@aws-amplify/ui-react-liveness": "^3.3.2",
     "@aws-sdk/client-rekognition": "^3.750.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.839.0",
+    "@aws-sdk/credential-providers": "^3.839.0",
     "@tailwindcss/vite": "^4.0.14",
-    "aws-amplify": "^6.13.1",
+    "aws-amplify": "^6.15.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.14"
